--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-6" id="selectMovie">
+      <div class="col-md" id="selectMovie">
         <br>
         <div class="container">
           <form id="add-movie">
@@ -43,11 +43,10 @@
         <br> 
       </div>
   
-      <div class="col-6" id="receipt">
+      <div class="col-md" id="receipt">
         <br>
         <h5>Your Purchase</h5>
         <div class="receipt-container">
-     
         </div>
         <hr>
         <div class="row">
